--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,12 @@
-# Ignore specific configs
-# These will typically have the path `settings/<local_file_only>`
+# Ignore specific configs (e.g. "custom/<local_config_only>")
 # You can omit the path component since git will match the file in any subdirectory
-amex
+# <local_config_only>
 
-# Ignore any file with the suffix "local" (e.g. aliases-local)
+# Ignore all files nested in directories named with the suffix "local" (e.g. "settings-local/")
+# Also ignore all files named with the suffix "local" (e.g. "aliases-local")
 # This is useful for adding local aliases, functions, or environment variables
+# that won't sync between you machines.
 *local
+
+# Other
+.DS_Store
